--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,9 @@ before_install:
     - docker pull node:8-onbuild
     - docker build -t probot-hello .
 
+install:
+    - docker built -t probot-hello.
+
 script:
     docker run --rm probot-hello npm run test
+    docker run --rm probot-hello npm run lint
